--- a/QR.html
+++ b/QR.html
@@ -1,54 +1,89 @@
-<!doctype html>
-<html lang="tl">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Listahan ng Empleyado</title>
-
-  <style>
-    body { font-family: Arial, sans-serif; background: #f3f3f3; padding: 20px; }
-    .card { background: white; padding: 15px; margin-bottom: 10px; border-radius: 8px; }
-    #qrimg { width: 200px; margin-top: 10px; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Barangay Poblacion - Employee Directory (Public)</title>
+<style>
+body { font-family: Arial, sans-serif; margin:0; background: linear-gradient(to bottom right,#0d6efd,#6bb6ff); }
+header { background: rgba(0,0,0,0.4); color: white; padding: 20px; text-align:center; backdrop-filter: blur(4px);}
+.container { max-width:1150px; margin: 25px auto; background:white; padding:20px; border-radius:12px; box-shadow:0 4px 20px rgba(0,0,0,0.15); }
+h2 { color:#0d6efd; }
+.table-wrapper { overflow-x: auto; }
+table { width:100%; border-collapse:collapse; margin-top:10px; min-width:1000px; }
+th, td { border:1px solid #ccc; padding:4px 6px; text-align:left; font-size:13px; }
+th { background:#0d6efd; color:white; }
+tr:nth-child(even){ background:#f5faff }
+.pic-preview{ width:50px; height:50px; object-fit:cover; border-radius:6px; border:1px solid #ddd }
+</style>
 </head>
-
 <body>
+<header>
+  <h1>Barangay Poblacion - Employee Directory</h1>
+</header>
+<div class="container">
+  <h2>Employee List</h2>
+  <div class="table-wrapper">
+    <table id="employeeTable">
+      <thead>
+        <tr>
+          <th>Barangay ID No.</th>
+          <th>Photo</th>
+          <th>Name</th>
+          <th>Birthday</th>
+          <th>Blood Type</th>
+          <th>Address</th>
+          <th>Contact</th>
+          <th>SSS</th>
+          <th>PhilHealth</th>
+          <th>Pag-IBIG</th>
+          <th>Emergency Name</th>
+          <th>Emergency Contact</th>
+        </tr>
+      </thead>
+      <tbody id="employeeBody"></tbody>
+    </table>
+  </div>
+</div>
+<script>
+const STORAGE_KEY='employees_v1';
+let employees=[];
 
-  <h2>Listahan ng Empleyado</h2>
+// Load employees from localStorage
+function loadEmployees(){
+  try {
+    employees = JSON.parse(localStorage.getItem(STORAGE_KEY)) || [];
+  } catch(e){
+    employees = [];
+  }
+  renderTable();
+}
 
-  <!-- QR Code Section -->
-  <h3>I-scan para makita ang page</h3>
-  <img id="qrimg" src="" alt="QR Code" />
+// Render table
+function renderTable(){
+  const tbody = document.getElementById('employeeBody');
+  tbody.innerHTML = '';
+  employees.forEach(e => {
+    const tr = document.createElement('tr');
+    tr.innerHTML = `
+      <td>${e.idNo}</td>
+      <td>${e.photo ? `<img src="${e.photo}" class="pic-preview">` : ''}</td>
+      <td>${e.name}</td>
+      <td>${e.birthday}</td>
+      <td>${e.blood}</td>
+      <td>${e.address}</td>
+      <td>${e.contact}</td>
+      <td>${e.sss}</td>
+      <td>${e.phil}</td>
+      <td>${e.pagibig}</td>
+      <td>${e.emergency}</td>
+      <td>${e.emergencyContact}</td>
+    `;
+    tbody.appendChild(tr);
+  });
+}
 
-  <hr>
-
-  <!-- Listahan ng Empleyado -->
-  <div id="list"></div>
-
-  <script>
-    // --- Employee List (palitan mo ito ng totoong empleyado) ---
-    const employees = [
-      { name: "Juan Dela Cruz", position: "Secretary" },
-      { name: "Maria Santos", position: "Treasurer" },
-      { name: "Pedro Reyes", position: "Tanod" }
-    ];
-
-    // --- Render employee cards ---
-    const list = document.getElementById("list");
-    employees.forEach(emp => {
-      const div = document.createElement("div");
-      div.className = "card";
-      div.innerHTML = `<strong>${emp.name}</strong><br>${emp.position}`;
-      list.appendChild(div);
-    });
-
-    // --- QR Code Generator ---
-    const pageUrl = window.location.href; 
-    const qrApi = "https://api.qrserver.com/v1/create-qr-code/?size=250x250&data=" 
-                  + encodeURIComponent(pageUrl);
-
-    document.getElementById("qrimg").src = qrApi;
-  </script>
-
+window.addEventListener('load', loadEmployees);
+</script>
 </body>
 </html>
